src/app/organizer/ItemTable.m.scss
@import '../variables';

// stacking rules

$dropdown-menu: 10;
$toolbar: 9;
$header-cells: 7;
$content-cells: 5;

:root {
  --table-header-height: 30px;
  --item-table-toolbar-height: 0;
}

.table {
  min-width: 1270px;
  display: grid;
  margin: 8px 0 16px 0 !important;

  > div {
    padding: 4px 8px;
    padding-top: calc(var(--item-size) * 0.75 * 0.5 - 4px);
    background-color: #27263a;
  }
}

.toolbar {
  grid-column: 1 / -1;
  position: sticky;
  z-index: $toolbar;
  box-sizing: border-box;

  top: var(--header-height);
  padding: 8px 8px !important;

  border-bottom: none !important;
  > div {
    display: flex;
    flex-direction: row;
    align-items: center;
    position: sticky;
    left: calc(4px + env(safe-area-inset-left));
    width: calc(98vw - env(safe-area-inset-left) - env(safe-area-inset-right));
    @include horizontal-space-children(4px);
  }
}

.importButton {
  @media (max-width: 1000px) {
    display: none;
  }
}

// Column headers
.header {
  vertical-align: bottom;
  text-align: left;
  border-bottom: 1px solid #ddd !important;
  background: #313233;
  position: sticky;
  z-index: $header-cells;

  top: calc(var(--header-height) + var(--item-table-toolbar-height));
  white-space: nowrap;
  padding-top: 4px !important;

  display: flex;
  flex-direction: column;
  justify-content: flex-end !important;

  img {
    height: 16px;
    width: 16px;
    vertical-align: bottom;
  }

  &.stats {
    text-align: right;
  }
}

.sorter {
  margin-left: 2px;
}

[role='cell'] {
  z-index: $content-cells;
}

.name {
  font-weight: bold;
  white-space: nowrap;
  &.header {
    font-weight: normal;
  }
}

.archetype {
  white-space: nowrap;
}

.selection {
  padding-left: 8px !important;
  padding-right: 2px !important;
  min-width: 20px;
  left: env(safe-area-inset-left);
  position: sticky;
  top: calc(var(--header-height) + var(--table-header-height) + var(--item-table-toolbar-height));
  &.header {
    top: calc(var(--header-height) + var(--item-table-toolbar-height));
  }
  z-index: $header-cells;
}

.rating {
  white-space: nowrap;
}

.icon,
.power,
.locked,
.tag,
.wishList,
.energy,
.dmg,
.year,
.season,
.customstat {
  text-align: center !important;
}

.dmg {
  padding-top: calc(var(--item-size) * 0.75 * 0.5 - 2px) !important;
  &.header {
    padding-top: 4px !important;
  }
}

.new {
  display: flex;
  flex-direction: column;
  align-items: center;
  > div {
    position: static !important;
  }
}

.icon {
  padding-top: 4px !important;
  min-width: calc(var(--item-size) * 0.75);
  left: calc(30px + env(safe-area-inset-left));
  position: sticky;
  top: calc(var(--header-height) + var(--table-header-height) + var(--item-table-toolbar-height));
  &.header {
    top: calc(var(--header-height) + var(--item-table-toolbar-height));
    padding-top: 0;
  }
  z-index: $header-cells;
  --icon-item-size: calc(var(--item-size) * 0.75);
  > :global(.item) {
    --item-size: var(--icon-item-size) !important;
    height: var(--item-size);
  }
}

.inlineIcon {
  height: 14px;
  width: 14px;
  margin-right: 0;
}

.positive {
  color: $xp;
}

.negative {
  color: #d14334;
}

.perks,
.traits {
  padding-top: calc(var(--item-size) * 0.5 * 0.5 - 5px) !important;
}
.perks {
  columns: 2;
  height: 100%;
  box-sizing: border-box;
  @include vertical-space-children(4px);
  column-gap: 8px;
  &.header {
    display: flex;
    flex-direction: column;
  }
}

.modPerks {
  break-inside: avoid;
  display: grid;
  gap: 4px;
  padding-left: 5px;
}

.traits {
  visibility: visible;
  .modPerks {
    flex: 0;
    min-width: 160px;
    flex-basis: 160px;
  }
}

.isPerk {
  border-left: 2px solid #888;
  padding-left: 3px;
}

// Perks in the perk/mod columns
.modPerk {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}
.miniPerkContainer {
  position: relative;
  contain: layout paint style;
  box-sizing: border-box;
  height: 18px;
  width: 18px;
  --item-size: 18px;
  margin-right: 3px;
  margin-left: -1px;
  flex-shrink: 0;
}
.perkSelected {
  font-weight: bold;
}
.perkSelectable {
  cursor: pointer;
}

.locationCell,
.killTrackerDisplay {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  white-space: nowrap;
  img {
    margin-right: 4px;
    height: 16px;
    width: 16px;
  }
}

// Recoil circle
.stat-2715839340,
.base-2715839340 {
  svg {
    circle {
      fill: black;
    }
  }
}

$modslotSize: 30px;
.modslot {
  display: flex;
  justify-content: center;
  padding-top: calc((((var(--item-size) * 0.75) - #{$modslotSize}) / 2) + 4px) !important;
}
.modslotIcon {
  height: $modslotSize;
  width: $modslotSize;
  margin: 0 1px;
}

.loadouts {
  > div {
    white-space: nowrap;
  }
}

// Indicate cells that can be filtered on shift-click
.shiftHeld {
  .hasFilter {
    &:hover {
      background-color: #999 !important;
      cursor: pointer;
    }
  }
}

.noItems {
  text-align: center;
  grid-column: 1 / -1;
  padding: 2em !important;
}

.itemIcon {
  cursor: pointer;
}

// The numeric value of the stat
.statValue {
  text-align: right !important;
  font-variant-numeric: tabular-nums;
  white-space: nowrap;
  > svg {
    vertical-align: middle;
    margin-left: 4px;
  }
}

